@@ -1,3 +1,9 @@
+2019-11-24  Niels Möller  <nisse@lysator.liu.se>
+
+	* mpn/generic/gcdext_1.c [USE_ZEROTAB]: Delete code variant for
+	USE_ZEROTAB != 0. Was used in the currently disabled binary
+	gcdext.
+
 2019-11-16 Seth Troisi <sethtroisi@google.com>
 
 	* tune/common.c (speed_mpn_perfect_power_p): New function.
